Fix Rubber Tree
- Patched rubber_sapling texture

- Fixed loot_tables predicate of rubber_leaves to give players saplings (alternative -> any_of, renamed after 1.20)